--- a/homework_02.ipynb
+++ b/homework_02.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "0e6faf30-1cac-4f8d-a5bd-0587c372f1b7",
    "metadata": {},
    "outputs": [
@@ -94,6 +94,37 @@
      "output_type": "stream",
      "text": [
       "Неизвестная команда, попробуйте снова.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "1. Добавить 2. Показать 3. Выйти\n",
+      " 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. moloko\n",
+      "2. \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "1. Добавить 2. Показать 3. Выйти\n",
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Программа завершена.\n"
      ]
     }
    ],
